<resources>
    <string name="app_name">BlackJack</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_logged_in">Authenticated</string>
    <!-- Strings used for fragments for navigation -->
    <string name="welcome_menu">Welcome Menu</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="blackjack">BLACKJACK</string>
    <string name="insert_code">Insert playroom ID</string>
    <string name="playroom_code">code</string>


    <!-- buttons -->
    <string name="login">Login with G</string>
    <string name="enter_room">Join room</string>
    <string name="create_room">Create room</string>
    <string name="join">Join</string>
    <string name="ready">Ready</string>
    <string name="hit">Hit</string>
    <string name="stand">Stand</string>
    <string name="fold">Fold</string>
    <string name="reset">Reset</string>
    <string name="_0">0€</string>
    <string name="balance">Balance:</string>
    <string name="opponents_turn">Opponent turn</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="share_this_code_with_a_friend">Share this code with a friend</string>

</resources>