<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WelcomeMenu"
    android:layout_marginHorizontal="50dp"
    android:background="@android:color/transparent">


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_above="@id/btn_join_room"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="218dp"
        android:text="@string/login">

    </Button>

    <Button
        android:id="@+id/btn_join_room"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_above="@id/btn_create_room"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="135dp"
        android:text="@string/enter_room" />

    <Button
        android:id="@+id/btn_create_room"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="52dp"
        android:text="@string/create_room" />


</RelativeLayout>