<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bet_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:text="@string/_0"
            android:textStyle="bold" />

        <GridLayout
            android:id="@+id/chips_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="0dp"
            android:useDefaultMargins="true">

            <ImageButton
                android:id="@+id/poker_chip_5"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/poker_chip_5" />

            <ImageButton
                android:id="@+id/poker_chip_10"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/poker_chip_10" />

            <ImageButton
                android:id="@+id/poker_chip_50"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/poker_chip_50" />

            <ImageButton
                android:id="@+id/poker_chip_100"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/poker_chip_100"/>
        </GridLayout>

        <GridLayout
            android:id="@+id/buttons_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:useDefaultMargins="true"
            android:layout_below="@id/bet_amount"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />
            <Button
                android:id="@+id/btn_ready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ready" />
        </GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/balance"
                android:text=""
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>